--- a/views/pages/publications.ejs
+++ b/views/pages/publications.ejs
@@ -63,7 +63,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
   </div>
   <% } %>
 </div>
-<div class='grid-x grid-container add-padd' >
+<!-- <div class='grid-x grid-container add-padd' >
   <div class="timeline">
     <% for(let i = 0; i < results.length; i++){
       let direction = '';
@@ -82,7 +82,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
       </div>
     <% } %>
   </div>
-</div>
+</div> -->
 
 
 
