--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -45,8 +45,8 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
         <h3 class='center' id='collaborators'>Collaborators</h3>
         <hr class="center-ball">
       </div>
-      <div class='cell small-12 add-padd'>
-        <div class='grid-x grid-padding-x grid-margin-y' data-equalizer>
+      <div class='cell small-12'>
+        <div class='grid-x grid-padding-x grid-padding-y grid-margin-y' data-equalizer>
           <div class='cell shrink border-right out-vc' data-equalizer-watch>
             <div class='in-vc'>
               <h5 class='no-margin'><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
