--- a/public/css/twentytwenty.css
+++ b/public/css/twentytwenty.css
@@ -50,9 +50,9 @@
   -moz-border-radius: 2px;
   border-radius: 2px; }
 
-.twentytwenty-horizontal .twentytwenty-before-label:before, .twentytwenty-horizontal .twentytwenty-after-label:before {
+/* .twentytwenty-horizontal .twentytwenty-before-label:before, .twentytwenty-horizontal .twentytwenty-after-label:before {
   top: 50%;
-  margin-top: -19px; }
+  margin-top: -19px; } */
 
 .twentytwenty-vertical .twentytwenty-before-label:before, .twentytwenty-vertical .twentytwenty-after-label:before {
   left: 50%;
@@ -102,13 +102,13 @@
 
 .twentytwenty-before-label {
   opacity: 0; }
-  .twentytwenty-before-label:before {
-    content: attr(data-content); }
+  /* .twentytwenty-before-label:before {
+    content: attr(data-content); } */
 
 .twentytwenty-after-label {
   opacity: 0; }
-  .twentytwenty-after-label:before {
-    content: attr(data-content); }
+  /* .twentytwenty-after-label:before {
+    content: attr(data-content); } */
 
 .twentytwenty-horizontal .twentytwenty-before-label:before {
   left: 10px; }
@@ -130,10 +130,10 @@
   z-index: 25; }
   .twentytwenty-overlay:hover {
     background: rgba(0, 0, 0, 0.0); }
-    .twentytwenty-overlay:hover .twentytwenty-after-label {
+    /* .twentytwenty-overlay:hover .twentytwenty-after-label {
       opacity: 1; }
     .twentytwenty-overlay:hover .twentytwenty-before-label {
-      opacity: 1; }
+      opacity: 1; } */
 
 .twentytwenty-before {
   z-index: 20; }
