--- a/public/css/app.css
+++ b/public/css/app.css
@@ -93,7 +93,6 @@ body {
   top: 100px;
   z-index: 99;
   width: 50%;
-  padding: 10%;
 }
 
 .left-menu-list {
@@ -103,6 +102,7 @@ body {
   font-size: 2em;
   padding: 3px;
   border-radius: 3px;
+  margin-left: 10%;
 }
 
 .fixit > div > div > div > a > .social_header {
