--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,9 +5,21 @@
   <img src="img/bg/bg_new.jpg" class='big-bg-img'/>
   <img src="img/bg/bg_old.jpg" class='big-bg-img' />
   <div class='my-left-menu'>
-    <h1 class='left-menu-list'>
-      Research
-    </h1>
+    <div class='left-menu-list'>
+      <a class='animated-arrow' href='./Aditi-Gurkar'>
+        <span class='the-arrow -left'>
+          <span class='shaft'></span>
+        </span>
+        <span class='main'>
+          <span class='text'>
+            Learn More
+          </span>
+          <span class='the-arrow -right'>
+            <span class='shaft'></span>
+          </span>
+        </span>
+      </a>
+    </div>
   </div>
 </div>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd' id='mission' data-equalizer>
