--- a/public/css/app.css
+++ b/public/css/app.css
@@ -102,6 +102,7 @@ body {
   background-size: cover;
   max-width: 100%;
   width: 0;
+  float: right;
 }
 
 .fixit > div > div > div > a > .social_header {
