--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,13 +20,6 @@ body {
   font-family: "Amiri",serif;
 }
 
-.news-text {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-}
-
 .my-small-h4  {
   font-family: "hk_groteskmedium",sans-serif;
 }
@@ -86,23 +79,6 @@ body {
   -moz-transition: all .50s ease-in-out;
   -o-transition: all .50s ease-in-out;
   transition: all .50s ease-in-out;
-}
-
-.my-left-menu {
-  position: relative;
-  z-index: 99;
-  width: 50%;
-}
-
-.left-menu-list {
-  /* The important line: */
-  top: 0;
-  right: 0;
-  background-image: linear-gradient(to left,rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.0)), url('../img/bg/hb1.jpeg');
-  background-size: cover;
-  max-width: 100%;
-  width: 0;
-  float: right;
 }
 
 .fixit > div > div > div > a > .social_header {
@@ -1103,4 +1079,23 @@ hr.center-ball:before {
   .my-small-h4 {
     font-size: 1.4625rem;
   }
+}
+
+/* Banner styles */
+.main-banner {
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+}
+
+.banner {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.banner-card {
+  background-color: rgba(0, 0, 0, 0.2);
+  border: 1px solid #fff;
+  border-radius: 3px;
 }
