--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,9 +1,38 @@
 <% include ../partials/head %>
 <% include ../partials/header %>  
 
-<div class="twentytwenty-container ">
-  <img src="img/bg/bg_new.jpg" class='big-bg-img'/>
-  <img src="img/bg/bg_old.jpg" class='big-bg-img' />
+<div class='main-banner'>
+  <div class='banner'>
+    <div class='banner-card'>
+      <h3>PlaceHolder</h3>
+      <a class='animated-arrow' href='./Aditi-Gurkar'>
+        <span class='the-arrow -left'>
+          <span class='shaft'></span>
+        </span>
+        <span class='main'>
+          <span class='text'>
+            Research Interest
+          </span>
+          <span class='the-arrow -right'>
+            <span class='shaft'></span>
+          </span>
+        </span>
+      </a>
+      <a class='animated-arrow' href='./Aditi-Gurkar'>
+        <span class='the-arrow -left'>
+          <span class='shaft'></span>
+        </span>
+        <span class='main'>
+          <span class='text'>
+            Collaboration
+          </span>
+          <span class='the-arrow -right'>
+            <span class='shaft'></span>
+          </span>
+        </span>
+      </a>
+    </div>
+  </div>
 </div>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd' id='mission' data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
