--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1090,6 +1090,7 @@ hr.center-ball:before {
 .banner {
   min-height: 100vh;
   width: 100%;
+  padding-top: 20vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
