--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1102,7 +1102,8 @@ hr.center-ball:before {
 }
 
 .banner-card {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
   border: 1px solid #fff;
   border-radius: 3px;
+  width: auto;
 }
