--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1105,6 +1105,6 @@ hr.center-ball:before {
   background-color: rgba(255, 255, 255, 0.2);
   border: 1px solid #fff;
   border-radius: 3px;
-  width: auto;
   color: #fff;
+  max-width: 400px;
 }
