--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
 <div class='main-banner'>
   <div class='banner'>
     <div class='banner-card banner-left'>
-      <h3>PlaceHolder</h3>
+      <h3>UNCOVERING CELLULAR RESPONSES TO GENOTOXIC STRESS</h3>
       <a class='animated-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
           <span class='shaft'></span>
