--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1104,6 +1104,10 @@ hr.center-ball:before {
   transition: all .50s ease-in-out;
 }
 
+.banner > .animated-arrow {
+  color: #fff !important;
+}
+
 .banner-card {
   background-color: rgba(255, 255, 255, 0.2);
   border: 1px solid #fff;
