--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
   <div class='banner'>
     <div class='banner-card banner-left'>
       <h4>UNCOVERING CELLULAR RESPONSES TO GENOTOXIC STRESS</h4>
-      <button class="hollow button" href="#">Research Interest</button>
+      <button class="hollow button secondary" href="#">Research Interest</button>
       <br/>
       <a class='animated-arrow' href='./Aditi-Gurkar'>
         <span class='the-arrow -left'>
