--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1142,7 +1142,7 @@ hr.center-ball:before {
   background-color: #fff !important;
 }
 .my-banner-arrow:hover {
-  color: rgb(224, 224, 224) !important;
+  background-color: rgb(224, 224, 224) !important;
 }
 
 .my-banner-arrow:hover > .my-banner-shaft:before, .my-banner-shaft:after {
